tests/golden/18_2.lean.expected
tests/golden/18_2.lean:23:6: error: aesop: maximum number of rule applications (150) reached. Set the 'maxRuleApplications' option to increase the limit.
